gallery first version working